--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "raleway-webfont": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
     "react-owl-carousel": "^2.3.3",
     "react-player": "^2.11.0",
+    "react-table": "^7.8.0",
+    "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4"
   }
 }
